@@ -1,3 +1,9 @@
+2015-09-17  Camille Scott  <camille.scott.w@gmail.com>
+   * scripts/interleave-reads.py: Added --no-reformat flah
+   to disable format checking and renaming of headers
+   * tests/{test_scripts.py, test-data/paired.malformat*}: Tests
+   and test data for --no-reformat flag.
+
 2015-09-11  Russell Y. Neches <ryneches@ucdavis.edu>
    * lib/hashbits.hh: added get_raw_tables to Hashbits
    * khmer/_khmer.cc: added get_raw_tables to Hashbits
